[package]
name = "j4-persist"
version = "0.1.3"
authors = ["Nathan Parsons <github@tantalum.blue>"]
edition = "2018"
description = "Replacement for i3wm's built-in 'kill' command, with the ability to protect containers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i3ipc = { git = "https://github.com/N-Parsons/i3ipc-rs", branch="marks" } # to be updated when changes merged upstream
notify-rust = "^3.6.3"
clap = "^2.33.0"
failure = "^0.1.7"

[features]
default = ["notifications"]
notifications = []
